syntax = "proto3";

package temporal.server.chasm.lib.activity.proto.v1;

option go_package = "go.temporal.io/server/chasm/lib/activity/gen/activitypb;activitypb";

import "temporal/server/api/persistence/v1/hsm.proto";

message StateToken {
  // Token schema version
  int32 version = 1;
  // Entity versioned transition
  temporal.server.api.persistence.v1.VersionedTransition versioned_transition = 2;
}